@@ -38,4 +38,4 @@ _%.tex: %.sgml
 	- $(JADE) -t sgml -ihtml -d $(top_srcdir)/swarmbook.dsl\#html $<
 
 %revhistory.sgml: ChangeLog $(SWARMHOME)/src/%/ChangeLog $(top_srcdir)/history.el
-	SWARMDOCS_BUILD_AREA=$(top_builddir) $(EMACS) -batch -l $(top_srcdir)/history.el -f process-changelog $*
+	SWARMDOCS=$(top_srcdir) SWARMDOCS_BUILD_AREA=$(top_builddir) $(EMACS) -batch -l $(top_srcdir)/history.el -f process-changelog $*
