@@ -1,10 +1,16 @@
 1998-05-26  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* Makefile.rules: Add $(top_srcdir)/history.el as a dependent of
-	%revhistory.sgml.
+	%revhistory.sgml.  Set SWARMDOCS environment variable to top_srcdir.
 
 	* history.el (process-changelog): Always print REVNUMBER pair,
-	even when empty.
+	even when empty.  
+
+	* history.el, protocol.el: Load common.el from directory
+	specified by SWARMDOCS directory.
+
+	* common.el (get-swarmdocs): Try to get it from SWARMDOCS environment
+	variable, otherwise default to SWARMHOME/../swarmdocs.
 
 1998-05-24  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
